change name file into config.toml

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://carlosjimenez88m.github.io/"
+baseURL = "carlosjimenez88m.github.io"
 languageCode = "en"
 DefaultContentLanguage = "en"
 title = "Website of Carlos Daniel Jiménez"
