change model web page

--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,4 +1,4 @@
-title = "Carlos Daniel Jiménez"
+title = "The Probability and the Word"
 author = "Carlos Daniel Jiménez"
 #copyright = "2020-2021"
 description = "A blog about Data Science and MLOps"
