--- a/params.toml
+++ b/params.toml
@@ -1,6 +1,5 @@
-
 title = "A blog about Data Science and MLOps"
-author = "Jane Doe"
+author = "Carlos Daniel Jiménez"
 #copyright = "2020-2021"
 description = "Call me Jane"
 profilePicture = "images/profile.jpg"
