--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,7 +1,7 @@
 title = "The Probability and the Word"
 author = "Carlos Daniel Jiménez"
 copyright = "2024-2026"
-description = "A blog about Data Science and MLOps"
+description = "A blog about MLOps"
 profilePicture = "https://github.com/carlosjimenez88M/carlosjimenez88m.github.io/blob/master/images/profile3.jpeg?raw=true"
 keywords = ""
 favicon = "https://raw.githubusercontent.com/carlosjimenez88M/carlosjimenez88m.github.io/refs/heads/master/favicons/"
