Change profile image to beach B&W photo

--- a/hugo.toml
+++ b/hugo.toml
@@ -34,7 +34,7 @@ enableEmoji = true
     enabled = true
     title = "Carlos Daniel Jiménez"
     subtitle = "Measuring and optimizing AI systems for production"
-    imageUrl = "/img/icon.jpeg"
+    imageUrl = "/img/profile3.jpeg"
     imageTitle = "Carlos Daniel Jiménez"
     imageWidth = 150
     imageHeight = 150
